# Props to https://github.com/main--/rust-lvm2 !
[package]
name = "exhume_lvm"
version = "0.1.2"
edition = "2021"
description = "Extract Logical Volumes from a Body of data."
documentation = "https://www.forensicxlab.com/docs/category/exhume---lvm"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
exhume_body = "=0.3.4"
byteorder = "1.4"
acid_io = { version = "0.1.0", default-features = false, features = ["alloc"] }
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.142", default-features = false, features = ["derive"] }
snafu = { version = "0.7.1", default-features = false }
tracing = { version = "0.1.36", default-features = false }
clap = "4.0"
clap-num = "1.1.1"
prettytable-rs = "^0.10"
log = "0.4.25"
env_logger = "0.11.6"


[features]
default = ["std"]
std = ["acid_io/std", "nom/std", "serde/std", "snafu/std", "tracing/std"]
